--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.OpenGLES20Activity">
+        <activity android:name=".activity.LayersActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
